--- a/kubernetes/templates/mongodb.yaml
+++ b/kubernetes/templates/mongodb.yaml
@@ -78,7 +78,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: pod-lister-binding
-  namespace: polytope-test
+  namespace: {{ .Release.Namespace }}
 subjects:
 - kind: ServiceAccount
   name: default
