--- a/kubernetes/templates/mongodb.yaml
+++ b/kubernetes/templates/mongodb.yaml
@@ -7,7 +7,7 @@ metadata:
   name: mongodb
 spec:
   serviceName: mongodb
-  replicas: 3
+  replicas: {{ .Values.deployment.mongodb.replicas }}
   selector:
     matchLabels:
       app: mongodb
