s3 polycy added to secret

--- a/kubernetes/templates/seaweedfs-secret-db.yaml
+++ b/kubernetes/templates/seaweedfs-secret-db.yaml
@@ -18,6 +18,41 @@ metadata:
 stringData:
   user: {{ .Values.mysql.auth.username }}
   password: {{ .Values.mysql.auth.password }}
+---
 {{- end }}
+{{- end }}
+{{- end }}
+
+{{- if .Values.seaweedfs.enabled }}
+{{- if .Values.seaweedfs.createS3Secret.enabled }}
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: {{ .Values.seaweedfs.createS3Secret.secretName }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/name: {{ template "seaweedfs.name" . }}
+    app.kubernetes.io/component: s3
+stringData:
+    seaweedfs_s3_config: |-
+      {
+        "identities": [
+          {
+            "name": "anvAdmin",
+            "credentials": [
+              {
+                "accessKey": "{{ .Values.seaweedfs.filer.s3.credentials.anvAdmin.accessKey }}",
+                "secretKey": "{{ .Values.seaweedfs.filer.s3.credentials.anvAdmin.secretKey }}"
+              }
+            ],
+            "actions": ["Admin", "Read", "Write", "List"]
+          },
+          {
+            "name": "anonymous",
+            "actions": ["Read"]
+          }
+        ]
+      }
 {{- end }}
 {{- end }}
