--- a/kubernetes/templates/service-node.yaml
+++ b/kubernetes/templates/service-node.yaml
@@ -1,34 +1,34 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: admin
-spec:
-  containers:
-  - name: sshd
-    image: rastasheep/ubuntu-sshd:latest
-    ports:
-    - containerPort: 22
-    volumeMounts:
-    - name: ssh-key
-      mountPath: /root/.ssh/authorized_keys
-      subPath: authorized_keys
-  volumes:
-  - name: ssh-key
-    secret:
-      secretName: ssh-key
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: admin
+# spec:
+#   containers:
+#   - name: sshd
+#     image: rastasheep/ubuntu-sshd:latest
+#     ports:
+#     - containerPort: 22
+#     volumeMounts:
+#     - name: ssh-key
+#       mountPath: /root/.ssh/authorized_keys
+#       subPath: authorized_keys
+#   volumes:
+#   - name: ssh-key
+#     secret:
+#       secretName: ssh-key
 
----
+# ---
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: sshd
-spec:
-  selector:
-    app: sshd
-  ports:
-    - protocol: TCP
-      port: 22
-      targetPort: 22
-  type: NodePort
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: sshd
+# spec:
+#   selector:
+#     app: sshd
+#   ports:
+#     - protocol: TCP
+#       port: 22
+#       targetPort: 22
+#   type: NodePort
 
