--- a/kubernetes/templates/seaweedfs-secret-db.yaml
+++ b/kubernetes/templates/seaweedfs-secret-db.yaml
@@ -6,7 +6,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: secret-seaweedfs-db
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
   annotations:
     "helm.sh/resource-policy": keep
     "helm.sh/hook": "pre-install"
@@ -30,7 +30,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: {{ .Values.seaweedfs.createS3Secret.secretName }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ template "seaweedfs.name" . }}
     app.kubernetes.io/component: s3
