--- a/kubernetes/templates/configmap.yaml
+++ b/kubernetes/templates/configmap.yaml
@@ -22,6 +22,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: polytope-config
+  namespace: {{ .Values.namespace }}
 data:
   config.yaml: |-
 {{ toYaml .Values | indent 6 }}
