--- a/kubernetes/templates/filebeat.yaml
+++ b/kubernetes/templates/filebeat.yaml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: filebeat-config
+  namespace: {{ .Values.namespace }}
   labels:
     k8s-app: filebeat
 data:
@@ -42,6 +43,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: filebeat
+  namespace: {{ .Values.namespace }}
   labels:
     k8s-app: filebeat
   annotations:
@@ -114,6 +116,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: filebeat
+  namespace: {{ .Values.namespace }}
 subjects:
 - kind: ServiceAccount
   name: filebeat
@@ -127,6 +130,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: filebeat
+  namespace: {{ .Values.namespace }}
   labels:
     k8s-app: filebeat
 rules:
@@ -143,6 +147,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: filebeat
+  namespace: {{ .Values.namespace }}
   labels:
     k8s-app: filebeat
 ---
