--- a/kubernetes/templates/frontend.yaml
+++ b/kubernetes/templates/frontend.yaml
@@ -25,6 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.deployment.frontend.replicas }}
   selector:
@@ -78,6 +79,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.frontend.host }}
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: frontend
