--- a/kubernetes/templates/ingress.yaml
+++ b/kubernetes/templates/ingress.yaml
@@ -22,6 +22,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: polytope-ingress
+  namespace: {{ .Values.namespace }}
   annotations:
     {{- with .Values.deployment.ingress.extra_ingress_annotations }}
     {{- toYaml . | nindent 4 }}
@@ -67,6 +68,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  namespace: {{ .Values.namespace }}
   annotations:
     cert-manager.io/cluster-issuer: ov-issuer
     dns.operators.ecmwf.int/on-transport-server: vs-transport-https
