--- a/kubernetes/templates/minio.yaml
+++ b/kubernetes/templates/minio.yaml
@@ -10,6 +10,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: minio
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.deployment.minio.replicas }}
   selector:
@@ -65,6 +66,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: minio-pv-claim
+  namespace: {{ .Values.namespace }}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -82,6 +84,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.deployment.minio.host }}
+  namespace: {{ .Values.namespace }}
 spec:
   type: NodePort
   ports:
