--- a/kubernetes/templates/mongodb.yaml
+++ b/kubernetes/templates/mongodb.yaml
@@ -5,6 +5,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mongodb
+  namespace: {{ .Values.namespace }}
 spec:
   serviceName: mongodb
   replicas: {{ .Values.deployment.mongodb.replicas }}
@@ -52,6 +53,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
+  namespace: {{ .Values.namespace }}
   labels:
     name: mongodb
 spec:
@@ -67,6 +69,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: pod-lister
+  namespace: {{ .Values.namespace }}
 rules:
 - apiGroups: [""]
   resources: ["pods"]
@@ -78,7 +81,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: pod-lister-binding
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.Namespace }}
 subjects:
 - kind: ServiceAccount
   name: default
