--- a/kubernetes/templates/pull-secret.yaml
+++ b/kubernetes/templates/pull-secret.yaml
@@ -10,6 +10,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: polytope-registry-cred
+  namespace: {{ .Values.namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "imagePullSecret" . }}
