--- a/kubernetes/templates/rabbitmq.yaml
+++ b/kubernetes/templates/rabbitmq.yaml
@@ -4,6 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbitmq
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.deployment.rabbitmq.replicas }}
   selector:
@@ -37,6 +38,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.deployment.rabbitmq.host }}
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: rabbitmq
