--- a/kubernetes/templates/redis.yaml
+++ b/kubernetes/templates/redis.yaml
@@ -5,6 +5,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-depl
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.deployment.redis.replicas }}
   selector:
@@ -31,6 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.deployment.redis.host }}
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: redis
