--- a/kubernetes/templates/worker.yaml
+++ b/kubernetes/templates/worker.yaml
@@ -27,6 +27,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: worker
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.deployment.worker.replicas }}
   selector:
@@ -116,6 +117,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: worker
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.deployment.worker.replicas }}
   selector:
@@ -240,6 +242,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: worker-{{ $i }}
+  namespace: {{ .Values.namespace }}
 spec:
   externalTrafficPolicy: Local # Only visible when accessing host node
   selector:
@@ -280,6 +283,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: mars-client
+  namespace: {{ .Values.namespace }}
 rules:
   - apiGroups: [""]
     resources: ["services"]
@@ -290,6 +294,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: mars-client
+  namespace: {{ .Values.namespace }}
 subjects:
   - kind: ServiceAccount
     name: default
