--- a/kubernetes/templates/worker.yaml
+++ b/kubernetes/templates/worker.yaml
@@ -232,6 +232,7 @@ spec:
 #   requests:
 #    storage: 50Gi
 
+{{ $values := .Values }}
 {{ range $i := until (.Values.deployment.worker.replicas | int) }}
 ---
 
@@ -242,7 +243,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: worker-{{ $i }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ $values.namespace }}
 spec:
   externalTrafficPolicy: Local # Only visible when accessing host node
   selector:
