default to not deploying seaweedfs and mysql

--- a/kubernetes/default.yaml
+++ b/kubernetes/default.yaml
@@ -18,6 +18,12 @@
 ## does it submit to any jurisdiction.
 ##
 
+seaweedfs:
+  enabled: false
+
+mysql:
+  enabled: false
+
 deployment:
   build:
     no_proxy: 
