disable seaweedfs monitor when seaweedfs isnt deployed

--- a/kubernetes/templates/service_monitors.yaml
+++ b/kubernetes/templates/service_monitors.yaml
@@ -1,4 +1,5 @@
 # service monitor for master
+{{ if .Values.seaweedfs.enabled}}
 {{ if .Values.seaweedfs.master.enabled }}
 {{ if .Values.seaweedfs.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
@@ -85,3 +86,5 @@ spec:
       path: /metrics
 {{ end }}
 {{ end }}
+{{ end }}
+
