remove config script and move skaffold to source

--- a/kubernetes/templates/frontend.yaml
+++ b/kubernetes/templates/frontend.yaml
@@ -35,7 +35,6 @@ spec:
     metadata:
       annotations:
         checksum/config: {{ .Values | toYaml | sha256sum }}
-        date: {{ date "20060102150405" .Release.Time | quote }}
       labels:
         app: frontend
     spec:
@@ -43,10 +42,10 @@ spec:
       - name: frontend-pod
         {{ if .Values.deployment.fqn_images }}
         image: {{ .Values.deployment.fqn_images.polytope_common }}
-        {{ else if .Values.deployment.build.tag }}
-        image: {{ .Values.deployment.build.registry }}/polytope-common:{{ .Values.deployment.build.tag }}
+        {{ else if .Values.deployment.tag }}
+        image: {{ .Values.deployment.registry }}/polytope-common:{{ .Values.deployment.tag }}
         {{ else }}
-        image: {{ .Values.deployment.build.registry }}/polytope-common:{{ .Release.Namespace }}-latest
+        image: {{ .Values.deployment.registry }}/polytope-common:{{ .Release.Namespace }}-latest
         {{ end }}
         imagePullPolicy: Always
         volumeMounts:
