--- a/kubernetes/templates/worker.yaml
+++ b/kubernetes/templates/worker.yaml
@@ -37,7 +37,6 @@ spec:
     metadata:
       annotations:
         checksum/config: {{ .Values | toYaml | sha256sum }}
-        date: {{ date "20060102150405" .Release.Time | quote }}
       labels:
         app: worker
     spec:
@@ -45,10 +44,10 @@ spec:
       - name: worker-pod
         {{ if .Values.deployment.fqn_images }}
         image: {{ .Values.deployment.fqn_images.worker }}
-        {{ else if .Values.deployment.build.tag }}
-        image: {{ .Values.deployment.build.registry }}/worker:{{ .Values.deployment.build.tag }}
+        {{ else if .Values.deployment.tag }}
+        image: {{ .Values.deployment.registry }}/worker:{{ .Values.deployment.tag }}
         {{ else }}
-        image: {{ .Values.deployment.build.registry }}/worker:{{ .Release.Namespace }}-latest
+        image: {{ .Values.deployment.registry }}/worker:{{ .Release.Namespace }}-latest
         {{ end }}
         imagePullPolicy: Always
         env:
@@ -136,10 +135,10 @@ spec:
       - name: worker-pod
         {{ if .Values.deployment.fqn_images }}
         image: {{ .Values.deployment.fqn_images.worker }}
-        {{ else if .Values.deployment.build.tag }}
-        image: {{ .Values.deployment.build.registry }}/worker:{{ .Values.deployment.build.tag }}
+        {{ else if .Values.deployment.tag }}
+        image: {{ .Values.deployment.registry }}/worker:{{ .Values.deployment.tag }}
         {{ else }}
-        image: {{ .Values.deployment.build.registry }}/worker:{{ .Release.Namespace }}-latest
+        image: {{ .Values.deployment.registry }}/worker:{{ .Release.Namespace }}-latest
         {{ end }}
         imagePullPolicy: Always
         env:
